<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_num"/>

    <EditText
        android:id="@+id/tFirstNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/second_num"/>

    <EditText
        android:id="@+id/tSecondNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"/>

    <Button
        android:id="@+id/btMult"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/mul"
        android:textColor="#ffffff"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btDiv"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/div"
        android:textColor="#ffffff"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btSub"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/sub"
        android:textColor="#ffffff"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btSom"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/som"
        android:textColor="#ffffff"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>